--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "next": "latest"
   },
   "devDependencies": {
+    "autoprefixer": "latest",
+    "postcss": "latest",
+    "tailwindcss": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest"
   }
